--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./dist",                            /* Specify an output folder for all emitted files. */
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
